@@ -1,3 +1,9 @@
+2000-09-15  Frank Ch. Eigler  <fche@redhat.com>
+
+	* enum.scm (define-full-insn-enum): Filter with keep-isa predicate.
+	* ifield.scm (-ifield-parse, -multi-ifield-parse): No longer assert
+	single-isa predicate, but support keep-isa filtering.
+
 2000-09-08  Frank Ch. Eigler  <fche@redhat.com>
 
 	* rtl-c.scm (s-sequence): Handle nested c-calls in both
